--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LoginRegister</string>
+    <string name="app_client_id">245802382061-b0hdhlu3e38lgl15u4jahjabugqdohoj.apps.googleusercontent.com</string>
 </resources>
